# stateful-event-processing

./: Makefile  README.md  env.template  pyproject.toml  requirements.txt
src/: settings.py
src/consumer/: config.py  sample_db_publisher.py  sample_kafka_exporter.py
src/mock_data/: publisher.py  user.py
